--- a/index.html
+++ b/index.html
@@ -999,16 +999,6 @@
 
                 <div class="card text-center p-8">
                     <svg xmlns="http://www.w3.org/2000/svg" width="48" height="48" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" style="color: var(--blue-600); margin: 0 auto 1rem;">
-                        <path d="M4 4h16c1.1 0 2 .9 2 2v12c0 1.1-.9 2-2 2H4c-1.1 0-2-.9-2-2V6c0-1.1.9-2 2-2z"></path>
-                        <polyline points="22,6 12,13 2,6"></polyline>
-                    </svg>
-                    <h3 class="text-xl font-semibold mb-2">Email</h3>
-                    <p class="text-gray-600 mb-4">Escríbenos tu consulta</p>
-                    <span class="badge badge-outline">info@patienttransport.com</span>
-                </div>
-
-                <div class="card text-center p-8">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="48" height="48" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" style="color: var(--blue-600); margin: 0 auto 1rem;">
                         <circle cx="12" cy="12" r="10"></circle>
                         <polyline points="12 6 12 12 16 14"></polyline>
                     </svg>
@@ -1041,20 +1031,20 @@
                             <div>
                                 <h4 class="font-semibold mb-2">Información requerida:</h4>
                                 <ul class="space-y-1 text-sm text-gray-600">
-                                    <li>• Nombre completo</li>
-                                    <li>• Teléfono de contacto</li>
-                                    <li>• Dirección de recogida</li>
-                                    <li>• Destino</li>
-                                    <li>• Fecha y hora</li>
+                                    <li>Nombre completo</li>
+                                    <li>Teléfono de contacto</li>
+                                    <li>Dirección de recogida</li>
+                                    <li>Destino</li>
+                                    <li>Fecha y hora</li>
                                 </ul>
                             </div>
                             <div>
                                 <h4 class="font-semibold mb-2">Necesidades especiales:</h4>
                                 <ul class="space-y-1 text-sm text-gray-600">
-                                    <li>• Tipo de asistencia requerida</li>
-                                    <li>• Dispositivos de ayuda (silla de ruedas, andador)</li>
-                                    <li>• Acompañante</li>
-                                    <li>• Observaciones adicionales</li>
+                                    <li>Tipo de asistencia requerida</li>
+                                    <li>Dispositivos de ayuda (silla de ruedas, andador)</li>
+                                    <li>Acompañante</li>
+                                    <li>Observaciones adicionales</li>
                                 </ul>
                             </div>
                         </div>
