--- a/index.html
+++ b/index.html
@@ -551,7 +551,7 @@
                             <i class="fas fa-envelope icon-large text-blue-custom mb-3"></i>
                             <h3 class="h5 fw-bold">Email</h3>
                             <p class="text-muted mb-3">Escríbenos tu consulta</p>
-                            <span class="badge bg-blue-100 text-blue-custom border border-blue-custom">info@patienttransport.com</span>
+                            <span class="badge bg-blue-100 text-blue-custom border border-blue-custom">patient.transport2025@gmail.com</span>
                         </div>
                     </div>
                 </div>
